--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -33,10 +33,14 @@ eureka:
       defaultZone:
 
 kafka:
-  representative-user:
-    enabled: true
-    main-groupId: main-representative-user-group
-    main-topic: main-representative-user
-    retry-groupId: retry-representative-user-group
-    retry-topic: retry-representative-user
-    dlq-topic: dlq-representative-user
+  consumer:
+    representative-user:
+      enabled: true
+      main-groupId: main-representative-user-group
+      main-topic: main-representative-user
+      retry-groupId: retry-representative-user-group
+      retry-topic: retry-representative-user
+      dlq-topic: dlq-representative-user
+  producer:
+    representative:
+      topic: main-representative
